# compartmental_model_case_studies

./: .gitignore  Dockerfile  Dockerfile.jhub  Final_CiSE_Images.ipynb  Makefile  README.md  fit_start_beaumont.sh  fit_start_houston.sh  fit_trans_rate_and_reduction_austin.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-jhub.txt  requirements.txt
analysis/: io_support.py  io_support_bu.py
app/: Makefile  job.json  project.ini
app/assets/: runner.sh
configs/transmission_rate_and_reduction/: austin_fit_trans_rate_and_reduction.yaml
data/Cities_Data/: Austin-Round_Rock_Population_5_age_groups.csv  Austin-Round_Rock_School_Calendar.csv  Beaumont-Port_Arthur_Population_5_age_groups.csv  Beaumont-Port_Arthur_School_Calendar.csv  ContactMatrixHome_5AgeGroups.csv  ContactMatrixSchool_5AgeGroups.csv  ContactMatrixWork_5AgeGroups.csv  Houston-The_Woodlands-Sugar_Land_Population_5_age_groups.csv  Houston-The_Woodlands-Sugar_Land_School_Calendar.csv  US_pop_UN.csv
outputs/beaumont_fit/: fit_start_beaumont_20200210.csv  fit_start_beaumont_20200226.csv  fit_start_beaumont_20200227.csv  fit_start_beaumont_20200228.csv
outputs/houston_fit/: fit_start_houston_20200209.csv  fit_start_houston_20200210.csv  (+5 more)
tests/: __init__.py  pytest_utils.py  test_dev_utils.py  test_fit_to_data.py  test_get_scenarios.py  test_legacy_simulate_multiple.py  test_main.py  test_model.py  test_multiple_pool.py  test_multiple_serial.py  test_outcome_handler.py  test_param.py  test_param_parser.py  test_pytest_utils.py  test_scenario.py  test_simulate_one.py  test_utils.py
(+166 files in other folders)
