[tool.poetry]
name = "COVID-SEIR"
version = "1.3.0"
description = ""
authors = ["Ethan Ho <eho@tacc.utexas.edu>"]

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.0.3"
scipy = "^1.4.1"
matplotlib = "^3.2.1"
numpy = "^1.18.2"
seaborn = "^0.10.0"
attrdict = "^2.0.1"
pyyaml = "^5.3.1"
jinja2 = "^2.11.1"
xarray = "^0.15.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
gitpython = "^3.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
